Add Timer Doc
